name:                multihashmap
version:             0.1.0.1
synopsis:            hashmap from keys to hashsets
description:         hashmap from keys to hashsets, yeah
homepage:            https://github.com/chessai/multihash
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          chessai1996@gmail.com
copyright:           (c) 2018 chessai
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.MultiHashMap
  build-depends:       base >=4.7 && <5.0, hashable, unordered-containers
  default-language:    Haskell2010
